--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@pinecone-database/pinecone": "^6.1.2",
     "@xenova/transformers": "^2.17.2",
+    "canvas": "^3.2.0",
     "dotenv": "^17.2.3",
     "formidable": "^3.5.4",
     "langchain": "^0.3.35",
