--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
-    "start": "next start"
+    "start": "next start",
+    "pages:build": "npx @cloudflare/next-on-pages"
   },
   "dependencies": {
     "@pinecone-database/pinecone": "^6.1.2",
@@ -15,7 +16,7 @@
     "formidable": "^3.5.4",
     "langchain": "^0.3.35",
     "mammoth": "^1.11.0",
-    "next": "15.5.4",
+    "next": "^15.5.2",
     "openai": "^6.1.0",
     "pdf-parse": "^1.1.1",
     "pdfjs-dist": "^3.11.174",
@@ -23,6 +24,7 @@
     "react-dom": "19.1.0"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.13.16",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
