--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
-    "start": "next start",
-    "pages:build": "npx @cloudflare/next-on-pages"
-  },
+    "start": "next start"
+    },
   "dependencies": {
     "@pinecone-database/pinecone": "^6.1.2",
     "@xenova/transformers": "^2.17.2",
